<resources>
    <string name="app_name">Priority Alerts</string>
    <string name="enter_the_contact_name">Enter the correct contact number</string>
    <string name="contact_value">Type the Number</string>
    <string name="message_string">Enter the keyword for alert</string>
    <string name="message_hint">Type the Keywords</string>
    <string name="trigger_button">Trigger!</string>
    <string name="clear_button">CLEAR</string>
    <string name="logo">app_logo</string>

    <string name="settings_button">App Settings</string>
    <string name="app_pref_category1">Features</string>
    <string name="app_category_key1">features_key</string>
    <string name="app_pref_category2">App Configurations</string>
    <string name="app_category_key2">configuration_key</string>

    <string name="sms_config">Active SMS Configuration</string>
    <string name="sms_config_key">notification_key</string>

    <string name="app_version">App Version</string>
    <string name="app_version_key">app_version_key</string>
    <string name="current_app_version">2.9.8</string>
    <string name="app_privacy_policy">Privacy Policy</string>
    <string name="privacy_url">http://unchartedtech.work/privacy-policy</string>
    <string name="user_guidance">Click to view App Privacy Policy</string>

    <string name="auto_suggestion_feature">Auto Suggestion</string>
    <string name="auto_suggestion_key">autosuggestion_key</string>
    <string name="auto_suggestion_on">Currently Enabled, restart the app for the feature</string>
    <string name="auto_suggestion_off">Currently Disabled, enabling it will request read contacts permission</string>

    <string name="dialog_text">Do you want to enable auto suggestion feature for contact number ?</string>
    <string name="helper_text_keyword">Keywords must be in comma or space separated format</string>

    <string name="OnboardingTitle1">"ENTER KEYWORDS"</string>
    <string name="OnboardingTitle2">"PRIORITY ALERTS"</string>
    <string name="OnboardingTitle3">"PRIVACY"</string>

    <string name="OnboardingDesc1">"Supports multiple keywords, informs when the user configured keyword is received via SMS".\n We need user approval to read incoming SMS in background to provide this feature"</string>
    <string name="OnboardingDesc2">"Enables Notification even in silent mode for the configured keywords"</string>
    <string name="OnboardingDesc3">"We follow all the android best practices to protect your privacy.We never collect and share data to anyone"</string>
    <string name="prev">Back</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>


</resources>
