<?xml version="1.0" encoding="utf-8"?>
<!-- add scroll view as root view, since the layout extends the screen size in landscape mode -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- add parent layout as relative layout to control/align position of child elements
    relative to the screen boundaries -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- add linear layout container to adjust elements to any screen size width -->
        <LinearLayout
            android:id="@+id/first_text_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/contact_name"
                style="@style/MyTextViewStyle"
                android:layout_width="0dp"
                android:layout_height="64dp"
                android:layout_weight="1"
                android:text="@string/enter_the_contact_name" />
            <!-- text editor to accept phone number, equal spaced along with text view -->
            <EditText
                android:id="@+id/contact_value"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:focusable="true"
                android:hint="@string/contact_value"
                android:inputType="phone"
                android:textAppearance="?android:attr/textAppearance"
                tools:ignore="Autofill" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/second_text_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/first_text_layout"
            android:layout_marginTop="24dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/message_string"
                style="@style/MyTextViewStyle"
                android:layout_width="0dp"
                android:layout_height="64dp"
                android:layout_weight="1"
                android:text="@string/message_string" />
         <!-- text editor to accept multiline inputs, equal spaced along with with text view -->
            <EditText
                android:id="@+id/message_value"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:hint="@string/message_hint"
                android:inputType="textMultiLine"
                android:textAppearance="?android:attr/textAppearance"
                tools:ignore="Autofill" />

        </LinearLayout>

        <!-- add trigger button to save the config and reset button to clear the config-->
        <Button
            android:id="@+id/trigger"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/clear"
            android:layout_alignParentStart="true"
            android:layout_marginStart="64dp"
            android:text="@string/trigger_button" />

        <Button
            android:id="@+id/clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/second_text_field"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="64dp"
            android:text="@string/clear_button" />
       <!-- display app logo -->
        <ImageView
            android:id="@+id/brand_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/clear"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/logo"
            android:src="@drawable/app_logo" />
        <android.support.design.widget.CoordinatorLayout
            android:id="@+id/user_message_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/brand_icon"/>
    </RelativeLayout>

</ScrollView>